@@ -4,6 +4,7 @@ export(add2csv)
 export(cc)
 export(clearNN)
 export(createTimer)
+export(detachNN)
 export(funMAE)
 export(funRMSE)
 export(getTimer)
